--- a/src/main/resources/slave.properties
+++ b/src/main/resources/slave.properties
@@ -1,4 +1,4 @@
-dburl = jdbc:postgresql://loclahost:5432/slave
+dburl = jdbc:postgresql://localhost:25432/postgres
 dblogin = postgres
 dbpassword = password123
 
