--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -9,12 +9,12 @@ services:
     volumes:
       - /bigdata/cdc-jms/db1:/var/lib/postgresql/data
     environment:
-      FLASK_ENV: development
+      POSTGRES_PASSWORD : "password123"
   # Slave
   db2:
     image: "postgres:12.1"
     ports:
-      - "15433:5432"
+      - "25432:5432"
     volumes:
       - /bigdata/cdc-jms/db2:/var/lib/postgresql/data
     environment:
