--- a/src/main/resources/master.properties
+++ b/src/main/resources/master.properties
@@ -1,4 +1,4 @@
-dburl = jdbc:postgresql://loclahost:5432/postgres
+dburl = jdbc:postgresql://localhost:15432/postgres
 dblogin = postgres
 dbpassword = password123
 
